# shlevy-backup

./: default.nix  shlevy-backup.cabal
src/: PrepareBackup.hs
