name:                shlevy-backup
version:             1.0.0.0
synopsis:            Personal backup tools
description:         Personal backup tools
homepage:            https://github.com/shlevy/shlevy-backup
license:             MIT
license-file:        LICENSE
author:              Shea Levy
maintainer:          shea@shealevy.com
copyright:           Copyright (c) 2016 Shea Levy
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable prepare-backup
  main-is:             PrepareBackup.hs
  build-depends:       base >=4.8 && <4.9,
                       unix >=2.7.1.0 && <2.8,
                       async >=2.1.0 && <2.2,
                       filepath >=1.4.0.0 && <1.5,
                       stm >=2.4.4.1 && <2.5,
                       directory >=1.2.2.0 && <1.3,
                       process >=1.2.3.0 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:        git
  location:    git://github.com/shlevy/shlevy-backup.git